Added update operation
